# DeepHeart

./: CMakeLists.txt  README.md  SlicerWeek DeepHeart_MONAI.pptx
MONAI/: MONAI_based_training.ipynb  loss.py  metric.py  optimizer.py  utils.py
MONAILabel-app/segmentation_tricuspid_valve/: README.md  info.yaml  main.py
MONAILabel-app/segmentation_tricuspid_valve/lib/: __init__.py  activelearning.py  infer.py  transforms.py  vnet.py
custom_code/: .flake8  config.json  runInference.sh  test.py  train.py
custom_code/base/: base_data_loader.py  base_model.py  base_trainer.py
custom_code/data_loader/: data_loaders.py
custom_code/model/: loss.py  losses.py  metric.py
custom_code/models/: __init__.py  vnet.py
custom_code/optimizer/: optimizer.py
custom_code/preprocessing/: __init__.py  augmentation.py  normalization.py  transforms.py
custom_code/trainers/: border_trainer.py  trainer.py
custom_code/utils/: util.py  visualization.py
notebooks/: RunParallelExport.ipynb
notebooks/MONAI/: MONAI_based_training.ipynb  loss.py  metric.py  transforms.py
scripts/: normalize_and_export.py
slicer/DeepHeart/: CMakeLists.txt  SegmentEditorDeepHeart.py
slicer/DeepHeart/Resources/UI/: SegmentEditorDeepHeart.ui
slicer/DeepHeart/SegmentEditorDeepHeartLib/: SegmentEditorEffect.py
slicer/ExportHeartData/: CMakeLists.txt  ExportHeartData.py
slicer/ExportHeartData/ExportHeartDataLib/: base.py  constants.py  exceptions.py  export.py  items.py  reference_volume.py  segmentation_utils.py  summary.py  utils.py
